# sparsedrive-tensorrt-deploy-implement

docs/: BEV_JSON_FORMAT.md
projects/configs/: sparsedrive_small_stage2.py
projects/mmdet3d_plugin/datasets/: nuscenes_3d_dataset.py
projects/trt_plugin/: CMakeLists.txt  DeformableAggregationPlugin.cpp  DeformableAggregationPlugin.h  deformable_aggregation_kernel.cu
tools/: export_bev_json.py  export_onnx_det_map.py  export_onnx_motion.py  fps.py  live_realsense.py  live_sim.py  onnx2trt.py  render_bev_from_json.py  test_trt.py
tools/visualization/: visualize.py
